When decrease score clear winner when there is no winner

--- a/JudoScoreBoard/Components/Pages/Home.razor
+++ b/JudoScoreBoard/Components/Pages/Home.razor
@@ -285,6 +285,7 @@
 
         if (_currentCount > TimeSpan.Zero && !_isGoldenScore)
         {
+            _winner = "";
             return;
         }
 
